# hearbeat

./: .gitignore  README.md  senior-check_project-brief.md
.specify/: feature.json  integration.json
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
HearBeat/: README.md
HearBeat/docs/: README.md  acoustic-scoring.md  architecture.md
HearBeat/ml/: .env.example  .gitignore  pyproject.toml
HearBeat/ml/hearbeat_ml/: __init__.py  api.py  baseline.py  features.py  scoring.py  summary.py  supabase_client.py
HearBeat/ml/tests/: test_scoring.py
HearBeat/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
brainstorm/: Olya_ideation.md  edu-games-gpt5.5.md  edu-games-opus4.8.md  hearbeat_product-vision.md  ideas.md  task.md
hackaton/: README.md  demo-mockup-v2.html  demo-mockup.html  hackathon-blocks-reference-guide.md  hearbeat-visuals.html  hearbeat_demo-audit-and-spec.md  hearbeat_pitchdeck-content.md  hearbeat_pitchdeck-visuals-and-metrics.md  hearbeat_product-vision.md  hearbeat_project-guide.md  hearbeat_ux-research-dossier-v2.md  pre-hackathon-prep-guide.md
hackaton/hearbeat-demo/: app.js  audioAnalysis.js  baseline.js  index.html  package-lock.json  package.json  server.js  style.css
hackaton/hearbeat-engine/: README.md  app.py  requirements.txt
specs/001-hearbeat-hackathon-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
testtask/: HearBeat.html
(+30 files in other folders)
